<resources>
    <!-- Generic texts -->
    <string name="app_name">ShoeStore</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="menu_logout_item">Logout</string>

    <!-- Login Fragment Screen -->
    <string name="login_screen_title">Login</string>
    <string name="login_email_header">&#8226; Email</string>
    <string name="login_email_field_hint">Type your email…</string>
    <string name="login_password_field_hint">Type your password…</string>
    <string name="login_password_header">&#8226; Password</string>
    <string name="login_register_button">Register</string>
    <string name="login_login_existing_account_button">Login with existing account</string>

    <!-- Welcome Fragment Screen -->
    <string name="welcome_screen_title">Welcome</string>
    <string name="welcome_header_text">Welcome to Toscaro\'s Shoe Store App!</string>
    <string name="welcome_shoe_app_icon_description">Shoe app icon</string>
    <string name="welcome_description_text">Toscaro\'s Shoe Store will help you to store shoes from all existing brands and easily control your stock.</string>
    <string name="welcome_how_to_use_text">How to use &gt;&gt;&gt;</string>

    <!-- Instruction Fragment Screen -->
    <string name="instruction_screen_title">How To Use</string>
    <string name="instruction_steps_header">&#8226; Steps</string>
    <string name="instruction_step_one_text">1# Step, click on the (+) button to add a new Shoe.</string>
    <string name="instruction_step_one_image_content_description">The example of a round orange button to add a new shoe</string>
    <string name="instruction_step_two_text">2# Step, write all information about it, like Shoe name, company, size, description and hit SAVE.</string>
    <string name="instruction_step_two_image_content_description">The example of an orange button to save a new shoe</string>
    <string name="instruction_continue_button">Continue &gt;&gt;&gt;</string>

    <!-- Shoe List Fragment Screen -->
    <string name="shoe_list_screen_title">Shoe List</string>
    <string name="shoe_list_add_new_shoe_button_content_description">Add new Shoe</string>

    <!-- Add Shoe Fragment Screen -->
    <string name="add_shoe_screen_title">Add New Shoe</string>
    <string name="add_shoe_shoe_image_content_description">Shoe image</string>
    <string name="add_shoe_name_header">&#8226; Name</string>
    <string name="add_shoe_shoe_name_field">Shoe name…</string>
    <string name="add_shoe_size_header">&#8226; Size</string>
    <string name="add_shoe_shoe_size_field">Shoe size…</string>
    <string name="add_shoe_company_header">&#8226; Company</string>
    <string name="add_shoe_shoe_company_field">Shoe company…</string>
    <string name="add_shoe_description_header">&#8226; Description</string>
    <string name="add_shoe_description_field">Type a brief description about the shoe…</string>

    <!-- Shoe Item Layout -->
    <string name="shoe_item_name_header">Name</string>
    <string name="shoe_item_size_header">Size</string>
    <string name="shoe_item_company_header">Company</string>
    <string name="shoe_item_description_header">Description</string>
    <string name="shoe_item_image_content_description">Add a shoe image</string>
</resources>
