<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.widget.ImageView.ScaleType" />

        <variable
            name="shoeViewModel"
            type="com.toscaro.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/root_add_shoe_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            tools:context=".view.add_shoe.AddShoeFragment">

            <ImageView
                android:id="@+id/shoe_image"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/add_shoe_shoe_image_content_description"
                app:srcBitmap="@{shoeViewModel.newShoeLiveData.image}"
                app:srcBitmapScaleType="@{ScaleType.CENTER_CROP}"
                app:srcDefaultDrawable="@{@drawable/add_picture}"
                app:srcDefaultScaleType="@{ScaleType.CENTER}" />

            <TextView
                android:id="@+id/shoe_name_header"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/add_shoe_name_header"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/shoe_name_text_field"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/background_primary_dark_border"
                android:hint="@string/add_shoe_shoe_name_field"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={shoeViewModel.newShoeLiveData.name}" />

            <TextView
                android:id="@+id/shoe_size_header"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/add_shoe_size_header"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/shoe_size_text_field"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/background_primary_dark_border"
                android:hint="@string/add_shoe_shoe_size_field"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:doubleText="@={shoeViewModel.newShoeLiveData.size}" />

            <TextView
                android:id="@+id/shoe_company_header"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/add_shoe_company_header"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/shoe_company_text_field"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/background_primary_dark_border"
                android:hint="@string/add_shoe_shoe_company_field"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={shoeViewModel.newShoeLiveData.company}" />

            <TextView
                android:id="@+id/shoe_description_header"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/add_shoe_description_header"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/shoe_description_text_field"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/background_primary_dark_border"
                android:gravity="top|start"
                android:hint="@string/add_shoe_description_field"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="80dp"
                android:text="@={shoeViewModel.newShoeLiveData.description}"
                android:textAlignment="viewStart" />

            <Space
                android:id="@+id/space_between_shoe_data_and_bottom_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="36dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shoe_cancel_button"
                    style="@style/ButtonBorderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/cancel_text" />

                <Button
                    android:id="@+id/save_shoe_button"
                    style="@style/ButtonNormalStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/save_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>